--- a/css/Style.css
+++ b/css/Style.css
@@ -50,7 +50,7 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family:"cuprum", "ptsans";
+    font-family:"cuprum", "Verdana", "Arial", "sans-serif";
     font-weight: 400;
     line-height: 24px;
     font-size: 13px;
@@ -115,7 +115,6 @@ background-color: #ee3643;
 }
 
 .features{
-    font-family:"cuprum";
     font-size: 20px;
     font-weight: bold;
     color: #ffffff;
@@ -165,7 +164,6 @@ main h2{
 }
 
 .popular-goods{
-    font-family: "ptsans";
     font-weight: bold;
     font-size: 17px;
 
@@ -185,14 +183,12 @@ main h2{
 }
 
 .popular-goods ul div a:first-child{
-    font-family: "cuprum";
     font-size:  14px;
     color:#eef4ec;
     background-color: #63a63e;
 }
 
 .popular-goods ul div a:last-child{
-    font-family: "cuprum";
     font-size:  14px;
     color:#32425c;
     border: #63a63e 2px;
@@ -204,12 +200,10 @@ main h2{
 }
 
 .services{
-    font-family: "ptsuns";
     background-color: #f5f8fa;
 
 }
 .company-info li{
-    font-family: "cuprum";
     font-size: 18px;
     line-height: 20px;
 }
@@ -498,6 +492,7 @@ max-width: 620px;
     margin-bottom: 10px;
     
     line-height: 20px;
+    font-family:"pt-sans", "Arial", "Arial Narrow", "sans-serif";
     font-weight: bold;
     text-align: center;
     
@@ -680,12 +675,10 @@ max-width: 620px;
     height: 145px;
 }
 
-.services h2{
-    font-family:"cuprum";
 
 }
 .services p{
-    font-family:"ptsans";
+    font-family:"ptsans", "Arial", "Arial Narrow", "sans-serif";
 
 }
 .services li{
